[package]
name = "jup_routes"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "1.18.18"
solana-client = "1.18.18"
spl-token = "6.0.0"
itertools = "0.13.0"
jup-ag = "0.8.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
